overflow fix

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -9,6 +9,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 20px;
   font-weight: 400;
+  overflow-x: hidden;
 }
 
 .rainbow-bg-container {
